<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:id="@+id/viewww"
    tools:context=".detail.DetailMatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDetailDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Friday, 20 August 2018" />

        <TextView
            android:id="@+id/txtDetailTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccentt"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="15:00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <LinearLayout
                    android:id="@+id/txtHomeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgDetailHome"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/txtDetailHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="19sp"
                        tools:text="Chelsea" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtDetailScoreHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/txtHomeName"
                    android:layout_toLeftOf="@id/txtdetvs"
                    android:layout_toRightOf="@+id/txtHomeName"
                    android:layout_toStartOf="@id/txtdetvs"
                    android:gravity="center"
                    android:textSize="40sp"
                    tools:text="4" />

                <TextView
                    android:id="@+id/txtDetailScoreAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/txtdetvs"
                    android:layout_toLeftOf="@id/txtAwayName"
                    android:layout_toRightOf="@+id/txtdetvs"
                    android:layout_toStartOf="@id/txtAwayName"
                    android:gravity="center"
                    android:textSize="40sp"
                    tools:text="4" />

                <RelativeLayout
                    android:id="@+id/txtdetvs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="VS"
                        android:textSize="20sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/txtAwayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgDetailAway"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/txtDetailAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="19sp"
                        tools:text="Chelsea" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/txtGoal"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ball" />

            <TextView
                android:id="@+id/txtDetailGoalHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/txtGoal"
                android:layout_toStartOf="@id/txtGoal"
                tools:text="Raul de Tomas 6'\nGael Kakuta 48'" />

            <TextView
                android:id="@+id/txtDetailGoalAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtGoal"
                android:layout_toRightOf="@id/txtGoal"
                android:gravity="right"
                tools:text="Raul de Tomas 6'\nGael Kakuta 48'\nLoren Moron 64'" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp">

            <ImageView
                android:id="@+id/txtYellow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/yellow_card" />

            <TextView
                android:id="@+id/txtDetailYellowHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/txtYellow"
                android:layout_toStartOf="@id/txtYellow"
                tools:text="Pedro Alcala 73'\nEsteban Granero 79'" />

            <TextView
                android:id="@+id/txtDetailYellowAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtYellow"
                android:layout_toRightOf="@id/txtYellow"
                android:gravity="right"
                tools:text="Marc Roca 83'" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp">

            <ImageView
                android:id="@+id/txtRed"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/red_card" />

            <TextView
                android:id="@+id/txtDetailRedHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/txtRed"
                android:layout_toStartOf="@id/txtRed"
                tools:text="Pedro Alcala 73'\nEsteban Granero 79'" />

            <TextView
                android:id="@+id/txtDetailRedAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtRed"
                android:layout_toRightOf="@id/txtRed"
                android:gravity="right"
                tools:text="Marc Roca 83'" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnLineup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="L i n e u p s"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/add" />
</RelativeLayout>