<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_match"
        android:enabled="true"
        android:icon="@drawable/match"
        android:title="@string/match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_team"
        android:enabled="true"
        android:icon="@drawable/team"
        android:title="@string/team"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_fav"
        android:enabled="true"
        android:icon="@drawable/favorites"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>
