<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".matches.next.FragNext">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/listitem" />

            <ProgressBar
                android:id="@+id/progresNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>


</FrameLayout>